--- a/estilos.css
+++ b/estilos.css
@@ -25,3 +25,13 @@ html{
     scroll-behavior: smooth;
    
 }
+
+
+footer{
+    
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.277)), url(img/1.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: rgb(255 255 255);
+}
