--- a/estilos.css
+++ b/estilos.css
@@ -26,9 +26,8 @@ html{
    
 }
 
-
 footer{
-    
+    margin-top: 120px;
     background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.277)), url(img/1.jpeg);
     background-size: cover;
     background-position: center;
