--- a/estilos.css
+++ b/estilos.css
@@ -26,11 +26,21 @@ html{
    
 }
 
+body {
+    overflow-x: hidden; /* Esto bloquea el desplazamiento horizontal */
+}
+
+
 footer{
     margin-top: 120px;
-    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.277)), url(img/1.jpeg);
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.277)), url(img/Captura.JPG);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     color: rgb(255 255 255);
+}
+
+.gallery-item:hover {
+    transform: scale(1.05);
+    transition: transform 0.2s ease-in-out;
 }
