--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,7 @@ nav {
     padding-top: 0px;
     width: 100%;
     height: 60px;
-    background-color: #ffffff;
+    background-color: #000000;
     z-index: 999; /* Asegura que la barra de navegación esté por encima de otros elementos */
 }
 
@@ -33,7 +33,7 @@ body {
 
 footer{
     margin-top: 120px;
-    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.277)), url(img/Captura.JPG);
+    background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0.637)), url(img/Captura.JPG);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
